--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="DetalleFactura.cs" />
     <Compile Include="Factura.cs" />
+    <Compile Include="GlobalData.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
